# face-android-app

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face.cpp  face.h  native-lib.cpp  ndkcamera.cpp  ndkcamera.h
app/src/main/cpp/OpenCV-android-sdk/samples/: settings.gradle
app/src/main/cpp/OpenCV-android-sdk/samples/color-blob-detection/: build.gradle
app/src/main/cpp/OpenCV-android-sdk/sdk/etc/haarcascades/: haarcascade_fullbody.xml  haarcascade_lowerbody.xml  haarcascade_upperbody.xml
app/src/main/cpp/OpenCV-android-sdk/sdk/etc/lbpcascades/: lbpcascade_silverware.xml
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/android/: Camera2Renderer.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  CameraRenderer.java  JavaCamera2View.java  JavaCameraView.java
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/calib3d/: Calib3d.java
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/features2d/: SIFT.java
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/imgproc/: Imgproc.java
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/photo/: AlignExposures.java  AlignMTB.java  CalibrateCRF.java  CalibrateDebevec.java  CalibrateRobertson.java  MergeDebevec.java  MergeExposures.java  MergeRobertson.java
app/src/main/cpp/OpenCV-android-sdk/sdk/java/src/org/opencv/videoio/: VideoCapture.java  Videoio.java
app/src/main/cpp/OpenCV-android-sdk/sdk/native/jni/include/opencv2/: calib3d.hpp  features2d.hpp  imgproc.hpp  photo.hpp  stitching.hpp  videoio.hpp
(+23 files in other folders)
